Changes from jTDS 1.0.3
=======================

04/19/2005 - Alin Sinpalean
 o Major code cleanup using various code inspection tools.

04/17/2005 - Alin Sinpalean
 o Applied Mike's patch for bug [1172405] BLOB/CLOB position methods fail: a
   BlobBuffer class was introduced to handle LOB buffering to memory/disk and
   BlobImpl/ClobImpl, as well as other classes, were modified accordingly.

===============================================================================
04/15/2005 - jTDS 1.0.3 released
===============================================================================

Changes from jTDS 1.0.2
=======================

04/15/2005 - Alin Sinpalean
 o Updated version number to 1.0.3.

04/13/2005 - Alin Sinpalean
 o Corrected bug [1182066] regression bug resultset: ResultSet.relative() was
   not working as expected.
 o Minor performance optimizations in ClobImpl and LOBTest.

04/11/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1179773] jTDS fails when used with c3p0
   connection pool.
 o Applied Mike's fix for bug [1180164] NPE in TdsData with mulit-byte charset.
 o Applied Mike'd fix for bug [1180169] JDBC escapes not allowed with Sybase
   addBatch.
 o Updated FAQ listing an additional reason why a ResultSet may be downgraded
   to update only read only: not a single SELECT statement.
 o Added DBSolo to the links page per Marko Hantula's request.
 o Closed bug [991089] INSTANCE parameter does not work with SQL Server 2005
   after adding an explanation to the FAQ on how to make it work.

04/07/2005 - Alin Sinpalean
 o Applied Mike and Dave's combined fix for bug [1176221] JtdsPreparedStatement
   setTime setTimestamp Daylight DST Bug.

04/04/2005 - David Kilzer
 o Refactored duplicate code in JtdsPreparedStatement.setDate(int, Date, Calendar),
   setTime(int, Time, Calendar) and setTimestamp(int, Timestamp, Calendar) into
   adjustTimeByCalendar(long, Calendar) method in preparation to fix [1176221]